[package]
name = "paper-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
actix-telepathy = "0.4.1"
clap = { version = "3.1.6", features = ["derive"] }
tokio = "1.17.0"
actix-broker = "0.4.1"
actix-rt = "2.7.0"
serde = "1.0"
log = "0.4.16"
